Fix overflow and counting

--- a/app/styles/scss/layout/_main.scss
+++ b/app/styles/scss/layout/_main.scss
@@ -630,7 +630,7 @@ footer {
     width: 100%;
 
     .inner-section-heading {
-      width: 100%;
+      width: 80%;
       margin-bottom: 30px;
     }
   }
